--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
   color: lightgreen;
   text-align: center;
   position: absolute;
-  top: 84vh;
+  top: 86vh;
   width: 200px;
   position: absolute;
   left: 50%;
@@ -97,6 +97,10 @@
 /* ABOUT SECTION */
 #profile-img {
   border-radius: 50%;
+  /* display: inline-block; */
+  margin: auto;
+  -webkit-box-shadow: -1px 2px 10px -2px #000000;
+  box-shadow: -1px 2px 10px -2px #000000;
 }
 
 .card {
@@ -110,12 +114,6 @@
 .skills li {
   font-size: 30px;
   margin: 20px;
-}
-
-img {
-  margin: 150px;
-  -webkit-box-shadow: -1px 2px 10px -2px #000000;
-  box-shadow: -1px 2px 10px -2px #000000;
 }
 
 /* PROJECTS SECTION */
@@ -139,6 +137,36 @@ img {
 }
 
 /* RESPONSIVE MEDIA QUERIES */
+
+@media screen and (max-width: 1200px) {
+  #welcome h1 {
+    font-size: 22px;
+  }
+
+  #welcome h1 span {
+    font-size: 22px;
+  }
+  #view-work {
+    font-size: 14px;
+    left: 49.9%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #welcome h1 {
+    font-size: 14px;
+  }
+
+  #welcome h1 span {
+    font-size: 14px;
+  }
+
+  #view-work {
+    font-size: 10px;
+    left: 49.7%;
+  }
+}
+
 @media screen and (min-width: 1400px) {
   img {
     width: 400px;
