--- a/style.css
+++ b/style.css
@@ -6,8 +6,22 @@
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+h2, h3, h4, h5 {
+  font-weight: 700;
+}
+
 #about h2, #about h3, #projects h2, #contact h2 {
   text-decoration: underline;
+}
+
+/* Nav */
+.navbar {
+  background: #0F111A;
+  font-weight: 600;
 }
 
 /* HOME SECTION */
@@ -20,7 +34,7 @@
   font-family: "Menlo", monospace, serif;
 }
 
-#toggle-colors {
+#toggle-btn {
   background: #0F111A;
   color: darkgray;
   top: 0;
@@ -28,7 +42,7 @@
   position: absolute;
 }
 
-#toggle-colors:hover {
+#toggle-btn:hover {
   cursor: pointer;
   color: lightgreen;
 }
@@ -75,7 +89,7 @@
   color: lightgreen;
   text-align: center;
   position: absolute;
-  top: 86vh;
+  top: 85vh;
   width: 200px;
   position: absolute;
   left: 50%;
@@ -107,6 +121,11 @@
   box-shadow: -1px 2px 10px -2px #000000;
 }
 
+#about-me-text {
+  line-height: 2;
+  min-width: 400px;
+}
+
 .card {
   margin: auto;
 }
@@ -132,12 +151,54 @@
 .carousel {
   margin-top: 50px;
 }
+
 .carousel-inner {
-  height: 600px;
+  height: 650px;
 }
+
 .carousel-caption {
   color: #F8F7F9;
   top: 50%;
+}
+
+.img-container {
+  position: relative;
+  display: inline-block;
+}
+
+.img-container img {
+  width: 100%;
+  max-width: 750px;
+  border-radius: 5px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0F111A;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.img-container:hover .overlay {
+  opacity: 0.9;
+}
+
+.overlay span {
+  font-size: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: #F8F7F9;
+}
+
+.img-cred span, .img-cred a {
+  font-size: 10px;
 }
 
 /* RESPONSIVE MEDIA QUERIES */
@@ -152,7 +213,7 @@
   }
   #view-work {
     font-size: 14px;
-    top: 87vh;
+    top: 86vh;
     left: 49.9%;
   }
   .skills li {
@@ -183,7 +244,7 @@
 
   #view-work {
     font-size: 10px;
-    top: 88vh;
+    top: 87vh;
     left: 49.7%;
   }
   .skills li {
