final version 1 commit

--- a/style.css
+++ b/style.css
@@ -237,6 +237,10 @@ h2, h3, h4, h5, h6 {
   .skills li {
     font-size: 18px;
   }
+  #about-me-text p {
+    line-height: 1.5;
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 845px) {
