--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+.navbar-toggler {
+  background: #090B10;
+}
+
 /* WELCOME SECTION */
 #welcome {
   height: 100vh;
