--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
-#about h2, #about h3, #projects h2, #contact h2 {
+#about h2, #about h3, #projects h2, #contact h2, #diagrams h2 {
   text-decoration: underline;
 }
 
@@ -220,6 +220,24 @@ h2, h3, h4, h5, h6 {
 .img-cred span, .img-cred a {
   font-size: 10px;
 }
+
+/* DIAGRAMS PAGE */
+#title-diagrams h1 {
+  font-size: 3em;
+}
+
+#diagrams {
+  background: #090B10;
+}
+
+#diagrams h2 {
+  color: #F8F7F9;
+}
+
+#diagrams-inner {
+  height: 500px;
+}
+
 
 
 
