--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,11 @@ h2, h3, h4, h5, h6 {
   box-shadow: -1px 2px 5px -2px #000000;
 }
 
+.card-dark {
+  background-color: #343a40;
+  color: #fff;
+}
+
 .list-style-none{
   list-style-type: none;
 }
