--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ h2, h3, h4, h5, h6 {
   left: 50%;
   padding: 5px;
   border-radius: 50px;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 #down:hover {
@@ -155,6 +155,10 @@ h2, h3, h4, h5, h6 {
 .card-dark {
   background-color: #343a40;
   color: #fff;
+}
+
+#bu-card:hover {
+  scale: 1.025;
 }
 
 .card-dark a {
