--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ h2, h3, h4, h5, h6 {
   position: absolute;
   top: 87vh;
   position: absolute;
-  left: 50%;
+  left: 50.1%;
   padding: 5px;
   border-radius: 50px;
   font-size: 2em;
@@ -336,6 +336,12 @@ h2, h3, h4, h5, h6 {
     font-size: 10px;
     top: 87vh;
     left: 49.7%;
+  }
+
+  #down {
+    font-size: 1.3em;
+    left: 50.6%;
+    margin-top: 2px;
   }
 
   .skills li {
